<resources>
    <string name="app_name">E-salon</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="email"> User Email</string>
    <string name="already_registered_sign_in">Already registered? Sign In</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="register_with_e_salon">Register with E-salon</string>
    <string name="log_out">LOG OUT</string>
    <string name="large_text">Large text</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />

    <string name="action_add_favourite">Cancel Appointment</string>
    <string name="action_play_next">Close</string>
    <string name="backdrop_title">SALON AND SPA</string>
    <string name="backdrop_subtitle">You Define Your Beauty</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="login">LOGIN</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="your_profile">Your Profile</string>
    <string name="price_ksh">Price: Ksh.</string>
    <string name="price">Price</string>
    <string name="title_activity_salon">Salon</string>
    <string name="saturday">Saturday 10AM - 10PM</string>
    <string name="friday">Friday 8AM - 10PM</string>
    <string name="thursday">Thursday 8AM - 10PM</string>
    <string name="wednesday">Wednesday 8AM - 10PM</string>
    <string name="tuesday">Tuesday 8AM - 10PM</string>
    <string name="monday">Monday: 8AM - 10PM</string>
    <string name="about">Echt Salon is a top notch salon offering Salon and spa services. We haze a Jacuzzi for hot steam bath and most massage tools. Our salon is located at T-MALL, mbagathi road. Come discover your beauty</string>
    <string name="salon">Salon | Home</string>
</resources>
