<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mourice.esalon.activity.EditHours">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="0dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:elevation="10dp"
        app:cardCornerRadius="7dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="150dp"
                android:id="@+id/a"
                android:layout_centerHorizontal="true"
                android:layout_height="80dp"
                android:src="@drawable/logo" />
            <LinearLayout
                android:id="@+id/b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/a"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Update Business Hours"
                    android:textSize="18dp"
                    android:textColor="@color/primary_darker"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:id="@+id/mon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monday"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/tue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tuesday"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/wed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wednesday"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/thur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thursday"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/fri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friday"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/sat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saturday"
                    android:textAlignment="center" />
            </LinearLayout>

            <Button
                android:id="@+id/update_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/b"
                android:layout_centerHorizontal="true"
                android:background="@color/accent"
                android:text="Update" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
